# invEngine

./: .gitignore  README.md  input.txt  pyproject.toml
invengine/: __init__.py  build.py  code.py
