[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "invEngine"
version = "0.1.0"
description = "A python compiler module for a mini language that allows you to create Minecraft mini games within the player's inventory with a SINGLE command"
authors = [{ name = "Norcith" }]
requires-python = ">=3.10"